WindGroup Dev/src/objects/Quick_Pay_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditAmount__c</fullName>
        <label>CreditAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DebitAmount__c</fullName>
        <label>DebitAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for Error in CR generation</description>
        <inlineHelpText>Indicator for Error in CR generation</inlineHelpText>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generated_Cash_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generated Cash Receipt</label>
        <referenceTo>Cash_Receipt__c</referenceTo>
        <relationshipLabel>Quick Pay Info</relationshipLabel>
        <relationshipName>Quick_Pay_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference01__c</fullName>
        <inlineHelpText>Tenant</inlineHelpText>
        <label>Reference01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference02__c</fullName>
        <inlineHelpText>Property</inlineHelpText>
        <label>Reference02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference03__c</fullName>
        <inlineHelpText>Invoice No</inlineHelpText>
        <label>Reference03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for Successful CR generation</description>
        <inlineHelpText>Indicator for Successful CR generation</inlineHelpText>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TxnReference__c</fullName>
        <label>TxnReference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueDate__c</fullName>
        <inlineHelpText>Format YYYYDDMM</inlineHelpText>
        <label>ValueDate</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Quick Pay Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reference03__c</columns>
        <columns>Account_No__c</columns>
        <columns>CreditAmount__c</columns>
        <columns>Success__c</columns>
        <columns>Generated_Cash_Receipt__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Error_Quick_Pay</fullName>
        <columns>NAME</columns>
        <columns>Reference03__c</columns>
        <columns>Account_No__c</columns>
        <columns>CreditAmount__c</columns>
        <columns>Success__c</columns>
        <columns>Generated_Cash_Receipt__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Error Quick Pay</label>
    </listViews>
    <listViews>
        <fullName>Success_Quick_Pay</fullName>
        <columns>NAME</columns>
        <columns>Reference03__c</columns>
        <columns>Account_No__c</columns>
        <columns>CreditAmount__c</columns>
        <columns>Success__c</columns>
        <columns>Generated_Cash_Receipt__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Success__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Success Quick Pay</label>
    </listViews>
    <listViews>
        <fullName>ThisWeekTransactions</fullName>
        <columns>NAME</columns>
        <columns>Reference03__c</columns>
        <columns>Account_No__c</columns>
        <columns>CreditAmount__c</columns>
        <columns>Success__c</columns>
        <columns>Generated_Cash_Receipt__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>This Week Transactions</label>
    </listViews>
    <listViews>
        <fullName>TodayTransactions</fullName>
        <columns>NAME</columns>
        <columns>Reference03__c</columns>
        <columns>Account_No__c</columns>
        <columns>CreditAmount__c</columns>
        <columns>Success__c</columns>
        <columns>Generated_Cash_Receipt__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>QP-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Pay Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>